Fixed issue 'Top bar stays visible.'

--- a/app/assets/stylesheets/display.scss
+++ b/app/assets/stylesheets/display.scss
@@ -83,7 +83,7 @@ a:hover {
   position: absolute;
   z-index: 1;
   height: 100px;
-  top: 0px !important
+  /*top: 0px !important*/
 }
 .lower-gradient{
   width: 100%;
@@ -105,7 +105,7 @@ a:hover {
   z-index: 5;
   text-align: center;
   background-size: 100% 100%;
-  top: 0px !important
+  /*top: 0px !important*/
 }
 
 .hole-bar ul{
